{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 20,
  "lineage": "9947aabf-1d74-fb5b-a883-7c50a9ed4195",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891612577699:network-acl/acl-0c0343ec8a38c5b2d",
            "default_network_acl_id": "acl-0c0343ec8a38c5b2d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c0343ec8a38c5b2d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "891612577699",
            "subnet_ids": [
              "subnet-041e37ceb4b7d3f5e",
              "subnet-0cbc667eb6147ad53",
              "subnet-0dc92172e343b020e",
              "subnet-0e35aa8beb584a8d0"
            ],
            "tags": {
              "Name": "tf-vpc-default",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "tf-vpc-default",
              "environment": "dev"
            },
            "vpc_id": "vpc-044d3db3d1c68332d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891612577699:route-table/rtb-05c8f1c8943bb5640",
            "default_route_table_id": "rtb-05c8f1c8943bb5640",
            "id": "rtb-05c8f1c8943bb5640",
            "owner_id": "891612577699",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "tf-vpc-default",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "tf-vpc-default",
              "environment": "dev"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-044d3db3d1c68332d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891612577699:security-group/sg-019ee4e3d3b279f03",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-019ee4e3d3b279f03",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "891612577699",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-vpc-default",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "tf-vpc-default",
              "environment": "dev"
            },
            "vpc_id": "vpc-044d3db3d1c68332d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c1dcc10a3e67d59f",
            "arn": "arn:aws:ec2:eu-central-1:891612577699:elastic-ip/eipalloc-0c1dcc10a3e67d59f",
            "domain": "vpc",
            "id": "eipalloc-0c1dcc10a3e67d59f",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-125-210-138.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.125.210.138",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-vpc-eu-central-1a",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "tf-vpc-eu-central-1a",
              "environment": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891612577699:internet-gateway/igw-0e724aee12cc1a14b",
            "id": "igw-0e724aee12cc1a14b",
            "owner_id": "891612577699",
            "tags": {
              "Name": "tf-vpc",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "tf-vpc",
              "environment": "dev"
            },
            "vpc_id": "vpc-044d3db3d1c68332d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c1dcc10a3e67d59f",
            "association_id": "eipassoc-082d0f1efcc374ec5",
            "connectivity_type": "public",
            "id": "nat-0040717d129efd246",
            "network_interface_id": "eni-00f231e09eded362f",
            "private_ip": "10.0.87.240",
            "public_ip": "3.125.210.138",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-041e37ceb4b7d3f5e",
            "tags": {
              "Name": "tf-vpc-eu-central-1a",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "tf-vpc-eu-central-1a",
              "environment": "dev"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09b71ce92796509631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0040717d129efd246",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b71ce9279650963",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e724aee12cc1a14b",
            "id": "r-rtb-0ed5d7df41af0dd9b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed5d7df41af0dd9b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891612577699:route-table/rtb-09b71ce9279650963",
            "id": "rtb-09b71ce9279650963",
            "owner_id": "891612577699",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-vpc-private",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "tf-vpc-private",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-044d3db3d1c68332d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891612577699:route-table/rtb-0ed5d7df41af0dd9b",
            "id": "rtb-0ed5d7df41af0dd9b",
            "owner_id": "891612577699",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-vpc-public",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "tf-vpc-public",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-044d3db3d1c68332d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ed888ffc4ca3dd9",
            "route_table_id": "rtb-09b71ce9279650963",
            "subnet_id": "subnet-0cbc667eb6147ad53"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b7ec466c0328adb",
            "route_table_id": "rtb-09b71ce9279650963",
            "subnet_id": "subnet-0dc92172e343b020e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086a73893427fa087",
            "route_table_id": "rtb-0ed5d7df41af0dd9b",
            "subnet_id": "subnet-041e37ceb4b7d3f5e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00432d9482eea7e56",
            "route_table_id": "rtb-0ed5d7df41af0dd9b",
            "subnet_id": "subnet-0e35aa8beb584a8d0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891612577699:subnet/subnet-0cbc667eb6147ad53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbc667eb6147ad53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891612577699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-private-eu-central-1a",
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "tf-vpc-private-eu-central-1a",
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-044d3db3d1c68332d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891612577699:subnet/subnet-0dc92172e343b020e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc92172e343b020e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891612577699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-private-eu-central-1b",
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "tf-vpc-private-eu-central-1b",
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-044d3db3d1c68332d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891612577699:subnet/subnet-041e37ceb4b7d3f5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041e37ceb4b7d3f5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891612577699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-public-eu-central-1a",
              "environment": "dev",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "tf-vpc-public-eu-central-1a",
              "environment": "dev",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-044d3db3d1c68332d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891612577699:subnet/subnet-0e35aa8beb584a8d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e35aa8beb584a8d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891612577699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-public-eu-central-1b",
              "environment": "dev",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "tf-vpc-public-eu-central-1b",
              "environment": "dev",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-044d3db3d1c68332d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:891612577699:vpc/vpc-044d3db3d1c68332d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c0343ec8a38c5b2d",
            "default_route_table_id": "rtb-05c8f1c8943bb5640",
            "default_security_group_id": "sg-019ee4e3d3b279f03",
            "dhcp_options_id": "dopt-01ffc79a87f8d4758",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044d3db3d1c68332d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c8f1c8943bb5640",
            "owner_id": "891612577699",
            "tags": {
              "Name": "tf-vpc",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "tf-vpc",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}